--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul id="list1">
       <li><span>texto ejemplo 1</span></li>
       <li><span>texto ejemplo 2</span></li>
-      <li><span class="selected">texto ejemplo 3</span></li>
+      <li><span class="selected">texto ejemplo </span></li>
       <li><span>texto ejemplo 4</span></li>
       <li><span>texto ejemplo 5</span></li>
     </ul>
